[tool.poetry]
name = "chatbot-persist-sessions"
version = "0.1.0"
description = ""
authors = ["Matthew Robb"]
readme = "README.md"
packages = [{include = "chatbot_persist_sessions", from="src"}]


[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.0"
langchain-postgres = "^0.0.6"
langchain-openai = "^0.1.7"
fastapi = "^0.111.0"
psycopg = {extras = ["binary"], version = "^3.1.19"}
streamlit = "^1.35.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
